interpreter/examples/bad/syntax/bad_call.dl
{
    function f(z) return z,
    int x.
    x = f()
}
